# ped-care

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rye.md
app/: main.py
app/core/: config.py  database.py  router.py
app/external_services/: gemini.py
app/infrastructure/: calendar.py  gemini.py
app/models/: event.py
app/routes/: gemini.py  health.py
app/utils/: load_env.py  logger_class.py
docs/: apresentacao.md  requistos.md
src/ped_care/: __init__.py
