[project]
name = "ped-care"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "GuilhermeLopesBertacini", email = "guilb2005@gmail.com" }
]
dependencies = [
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.25",
    "google-generativeai>=0.8.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ped_care"]
